--- a/ProiectRoloway/Views/Incomes/Add.cshtml
+++ b/ProiectRoloway/Views/Incomes/Add.cshtml
@@ -30,7 +30,7 @@
 {
     <table cellpadding="0" cellspacing="0">
         <tr>
-            <th colspan="2" align="center">Customer Details</th>
+            <th colspan="2" align="center"></th>
         </tr>
         <tr>
             <td>Income name: </td>
