--- a/ProiectRoloway/Views/Incomes/Edit.cshtml
+++ b/ProiectRoloway/Views/Incomes/Edit.cshtml
@@ -29,7 +29,7 @@
 {
     <table cellpadding="0" cellspacing="0">
         <tr>
-            <th colspan="2" align="center">Customer Details</th>
+            <th colspan="2" align="center"></th>
         </tr>
         <tr>
             <td>Expense name: </td>
