--- a/ProiectRoloway/Views/Shared/_Layout.cshtml
+++ b/ProiectRoloway/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("LogOut", "LogIn", "Users")</li>
+                    <li>@Html.ActionLink("Your account", "Details", "Users")</li>
                 </ul>
             </div>
         </div>
