--- a/ProiectRoloway/Views/Users/Details.cshtml
+++ b/ProiectRoloway/Views/Users/Details.cshtml
@@ -5,6 +5,6 @@
 
 <h2>Username: @Session["Username"].ToString()</h2>
 
-<h3>Change password</h3>
+<h3>@Html.ActionLink("Edit Account", "ChangePsw", new { id = (string)Session["Id"] })</h3>
 
 <h3>@Html.ActionLink("Delete user", "Confirmation", new { id = (string)Session["Id"] })</h3>
